--- a/assets/scss/partials/_navigation.scss
+++ b/assets/scss/partials/_navigation.scss
@@ -5,6 +5,7 @@
     z-index: $z-index-nav;
     transform: translateY(0);
     background-color: $dark-blue-6;
+    border: 1px solid rgba($black, 0.10);
     box-shadow: 0 3px 6px rgba($black, 0.09);
 
     &.static {
@@ -90,12 +91,15 @@
     }
 
     .primary-navigation {
-        top: 0;
-        z-index: -1;
         width: 100%;
         overflow: auto;
         position: fixed;
         transform: translateY(0px);
+        top: calc(#{$height-nav} + 1px);
+
+        &.open {
+            height: 100vh;
+        }
     }
 
     .dropdown {
